<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    tools:context=".presentation.Activity.CreateFlashCardActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/modButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"

        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toEndOf="@+id/delButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"
        app:layout_constraintBottom_toBottomOf="@+id/container"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/ic_delete_forever_white_24dp" />


    <TextView
        android:id="@+id/currentType"
        android:layout_width="480dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="825dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="430dp"
        android:layout_height="681dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentType"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/mcHead"
        android:layout_width="385dp"
        android:layout_height="340dp"
        android:layout_marginTop="20dp"
        android:background="@color/flashcard_color"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/mcEntry4"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/wrongchoice"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/mcHead"
        app:layout_constraintStart_toStartOf="@+id/mcHead"
        app:layout_constraintTop_toBottomOf="@+id/mcEntry3" />

    <TextView
        android:id="@+id/mcEntry1"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/flashcard_color"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/mcHead"
        app:layout_constraintStart_toStartOf="@+id/mcHead"
        app:layout_constraintTop_toBottomOf="@+id/mcHead" />

    <TextView
        android:id="@+id/mcEntry2"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/wrongchoice"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/mcHead"
        app:layout_constraintStart_toStartOf="@+id/mcHead"
        app:layout_constraintTop_toBottomOf="@+id/mcEntry1" />

    <TextView
        android:id="@+id/mcEntry3"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/wrongchoice"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/mcHead"
        app:layout_constraintStart_toStartOf="@+id/mcHead"
        app:layout_constraintTop_toBottomOf="@+id/mcEntry2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="385dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:background="@color/flashcard_color"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title"
        android:textSize="36sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="Title" />

    <TextView
        android:id="@+id/body"
        android:layout_width="385dp"
        android:layout_height="540dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/flashcard_color"
        android:gravity="center|center_vertical"
        android:text="@string/example_of_front_side_of_a_flash_card"
        android:textAlignment="center"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Example of front side of a flash card" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="484dp"
        android:clickable="true"
        app:backgroundTint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"

        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toStartOf="@+id/delButton"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.656"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/prevButton"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="484dp"
        android:clickable="true"
        app:backgroundTint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

    </FrameLayout>


</android.support.constraint.ConstraintLayout>