...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/decks_icon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

...
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addCard"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardList"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/ic_visibility_black_24dp" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardList"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/addcardiconselected" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exitFlashList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
